DBusGProxy: remove duplicate owner match rules.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=33646
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>